--- a/src/styles/veiklos-kryptys.scss
+++ b/src/styles/veiklos-kryptys.scss
@@ -185,3 +185,116 @@ main {
         }
     }
 }
+
+@media (max-width: 769px){
+    .section-1 {
+      grid-template-columns: 1fr;
+      grid-template-rows: 400px 700px;
+      width: 100%;
+
+      .forma-1, .forma-2 {
+        display: none;
+      }
+
+
+      .veiklos-mobile-shape {
+        background: url("/kontaktai/mobile-shape.svg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 600px;
+        height: 600px;
+        position: absolute;
+        right: -5px;
+
+        &::before {
+            content: "";
+            position: absolute;
+            left: -60%;
+            width: 100%;
+            height: 99%;
+            background: var(--green-spot);
+            transform: rotate(-4deg);
+            z-index: -1;
+        }
+       
+      }
+
+      .content-top {
+        position: static;
+        grid-column: 1/4;
+        color: var(--dark-green);
+        width: 60%;
+        transform: translate(0, 100px);
+        margin: auto;
+
+        h2 {
+            margin-bottom: 30px;
+        }
+
+        p {
+            margin-bottom: 20px;
+        }
+
+        .button {
+            background: var(--dark-green);
+            color: var(--green-light);
+        }
+      } 
+
+      .content-left {
+        width: 90%;
+        color: var(--dark-green);
+        grid-column: 1;
+        grid-row: 2;
+        transform: translate(0, 35px);
+        margin: auto;
+
+        .brands {
+            flex-wrap: wrap;
+            svg g path {
+                fill: #004A4E;
+            }
+        }
+
+        .button {
+            background: var(--dark-green);
+            color: var(--green-light);
+        }
+      }
+
+      .content-right {
+        width: 90%;
+        color: var(--dark-green);
+        grid-column: 1;
+        grid-row: 3;
+        transform: translate(0, -120px);
+        margin: auto;
+
+        .brands {
+            flex-wrap: wrap;
+            svg g path {
+                fill: #004A4E;
+            }
+        }
+
+        .button {
+            background: var(--dark-green);
+            color: var(--green-light);
+        }
+      }
+    }
+
+    .animated-opacity {
+        width: 90%;
+        transform: translate(0);
+        margin: auto;
+        margin-top: -50px;
+    }
+}
+
+
+@media (max-width: 426px){
+    .section-1  .content-top {
+        width: 90%;
+    }
+}
