--- a/src/styles/verslo-inovaciju-labaratorija.scss
+++ b/src/styles/verslo-inovaciju-labaratorija.scss
@@ -17,6 +17,7 @@ button, a, .logo, .right {
 }
 
 
+
 header {
     .logo {
         transform: translateY(0%);
@@ -26,12 +27,12 @@ header {
     .right {
         transform: translateY(0px);
         clip-path: inset(0 0 0% 0);
-        color: var(--blue-dark) !important;
+        color: var(--blue-dark);
 
         .menu .line,
         .menu .bubble,
         .language {
-            background: var(--blue-dark) !important;
+            background: var(--blue-dark);
         }
     }
 }
@@ -53,6 +54,10 @@ main {
     position: relative;
     clip-path: inset(0 0 0 100%);
     transform: translateX(-300px);
+
+    .mobile-shape {
+        display: none;
+    }
 
     .shape-1 {
         position: absolute;
@@ -106,6 +111,7 @@ main {
         transform: translate(300px, 290px);
         position: absolute;
         right: 1300px;
+        color: var(--blue-extra-light);
     }
 
     .content {
@@ -123,6 +129,11 @@ main {
 
         p {
             margin-bottom: 20px;
+        }
+
+        .button {
+            background: var(--blue-extra-light);
+            color: var(--blue-dark);
         }
     }
 }
@@ -225,6 +236,7 @@ main {
     color: var(--blue-dark);
     margin: auto;
     position: relative;
+    background: var(--blue-extra-light);
     transform: rotate(-3deg);
     width: 120%;
     left: -100px;
@@ -280,10 +292,7 @@ main {
             color: var(--blue-extra-light);
         }
     }
-
-   
 }
-
 
 footer {
     color: var(--blue-extra-light) !important;
@@ -388,6 +397,137 @@ footer {
         .content {
             grid-column: 3/7;
             transform: translate(0, 50px);
+        }
+    }
+}
+
+@media (max-width: 769px){
+
+    .section-1 {
+      grid-template-columns: 1fr;
+      grid-template-rows: 620px 700px;
+      width: 100%;
+      min-height: 600px;
+
+      .shape-1 {
+        height: 595px;
+        width: 500px;
+        left: auto;
+        right: 200px;
+
+        &::before {
+            height: 100%;
+            width: 100%;
+            background: var(--blue-dark);
+        }
+
+        &::after {
+            display: none;
+        }
+
+        svg {
+            display: none;
+          }
+      }
+      
+      .mobile-shape {
+        display: block;
+        background: url("/tvarumas/verslo-mobile-shape.svg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 598px;
+        height: 540px;
+        position: absolute;
+        right: -5px;
+      }
+      
+      .shape-2 {
+        width: 120%;
+        height: 200px;
+        transform: rotate(-4deg);
+        top: 550px;
+        left: -10%;
+      }
+
+      .content {
+        color: var(--blue-dark);
+        grid-column: 1;
+        width: 90%;
+        left: 0px;
+        right: 0px;
+        margin: 30px auto;
+        transform: translate(0);
+        
+        .button {
+            background: var(--blue-dark);
+            color: var(--blue-extra-light);
+        }
+      }
+    }
+
+    .section-2, .section-3 {
+        display: block;
+        transform: rotate(0);
+        left: 0;
+        width: 100%;
+        margin: 0;
+        .foto-1, .foto-2 {
+            position: relative;
+            width: 120%;
+            height: 200px;
+            top: 0;
+            left: -10%;
+            border-radius: 0px;
+            transform: rotate(-4deg);
+
+            .shape-2 {
+                display: none;
+            }
+        }
+
+        .content {
+            grid-row: auto;
+            grid-column: 1;
+            width: 90%;
+            top: -50px;
+            left: 0px;
+            margin: 100px auto;
+            transform: rotate(0deg);
+        }
+    }
+}
+
+
+@media (max-width: 426px){
+  
+    .section-1 {
+        grid-template-columns: 1fr;
+        grid-template-rows: 600px 850px;
+
+        .veiklos-mobile-shape {
+            width: 428px;
+            height: 380px;
+        }
+
+        h1 {
+            position: relative;
+            top: -50px;
+            left: 0;
+            width: 90%;
+            transform: translate(0);
+            margin: auto;
+        }
+
+        .shape-2 {
+            top: 550px;
+        }
+    }
+
+    .section-3 {
+        margin-top: -100px;
+        
+        .content {
+            margin-bottom: 0;
         }
     }
 }
