--- a/src/styles/404.scss
+++ b/src/styles/404.scss
@@ -145,7 +145,6 @@ header {
         img {
             width: clamp(24px, 2.5vw, 47px);
             height: clamp(24px, 2.5vw, 47px);
-            transform: rotate(180deg);
         }
     }
 
@@ -154,290 +153,25 @@ header {
 
 
 
+@media (min-width: 1601px) {
 
-
-// Media
-// Mobile
-@media (max-width: 768px){
     .loading-section {
-
-        grid-template-columns: repeat(6, 150px);
-
-        h1 {
-            font-size: clamp(42px, 10vw, 54px);
-            max-width: 250px;
-        }
-
-        .form-1 {
-            height: 600px;
-            top: 50px;
-
-           .fill {
-            left: -100px;
-            clip-path: inset(2.36% 0% 22% 16.4% round 74px 0);
-           }
-        }
-
+        grid-template-columns: repeat(6, 372px);
+        grid-auto-rows: 266px;
+    
         .form-2 {
-            grid-row: 2/6;
-            width: 728px;
-            height: 300px;
-            max-height: 903px;
-            background: var(--dark-green);
-            border-radius: 74px;
-            position: absolute;
-            top: 184.4px;
-            left: -106px;
-
-            &::before {
-                display: none;
-            }
-        }
-    }
-
-   .iniciatives {
-        grid-column: 3/6;
-        grid-row: 2;
-        color: var(--green-light);
-        top: 176px;
-        left: 0;
-        position: absolute;
-        right: 300px;
-   }
-
-   .partners {
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: start;
-        grid-column: 1/5;
-        grid-row: 4;
-        position: relative;
-        top: 0;
-        gap: 20px;
-        width: 100vw;
-
-        p {
-            width: 180px;
-            text-align: start;
-            color: var(--dark-green);
-            transform: translate(0, 0);
-        }
-
-        .swiper {
-
-            .swiper-wrapper {
-                width: 52%;
-            }
-
-            .swiper-slide {
-                flex-direction: column;
-                height: 200px;
-
-                img {
-                    width: 87px;
-                    height: 63px;
-                    object-fit: contain;
-                }
-
-                img:nth-of-type(odd) {
-                    position: relative;
-                    top: 0px
-                 }
-            }
-
-          
-        }
-        
-   }
-
-   .active-areas {
-    transform: rotate(0);
-    flex-direction: column;
-    overflow: visible;
-    width: 100%;
-
-        .left,.right, .center  {
-            background: none;
-            
-            &::before {
-                display: none
-            }
-            
-           .content {
-            width: 100%;
-            transform: none;
-            color: var(--dark-green);
-           }
-        }
-
-        .left .content, .right .content {
-            position: absolute;
-            top: -28px;
-            left: 28px;
-
-            &::before {
-                width: 120%;
-                background: var(--dark-green);
-            }
-
-            svg {
-                right: -90%;
-            }
-        }
-
-        .right .content {
-            top: 177px;
-            left: 161px;
-            width: 135px;
-        }
-
-        .center {
-            background: none;
-            transform: none;
-            h2 {
-                position: absolute;
-                top: 158px;
-                left: -613px;
-                color: var(--dark-green);
-                font-size: 3em;
-                transform: rotate(-90deg);
-            }
-        }
-
-        .mobile-shape-2 {
-            width: 100vw;
-            height: 100%;
-            background: url('/landing/shape-2.svg');
-            background-repeat: no-repeat;
-            background-position: right;
-            position: absolute;
-            top: -165px;
+            top: 0px;
             left: 1px;
         }
-   }
-
-   .partnership {
-    grid-auto-rows: 166px;
-    grid-template-columns: none;
-    left: 0;
-    top: -262px;
-
-    .shape-left {
-        display: none;
-    }
-
-    h2 {
-        position: relative;
-        left: 29px;
-    }
-   }
-
-   .news {
-    background: none;
-
-    .form-7, .form-8, .news-img {
-        display: none;
-    }
-   }
-}
-
-// Desktop
-@media (max-width: 800px){
-    .iniciatives {
-        max-width: 150px;
-    }
-}
-
-@media (min-width: 769px) and (max-width: 1000px){
-    .loading-section {
-        grid-template-columns: repeat(6, 150px) !important;
-    }
-
-    .active-areas {
-       
-        .center {
-            left: 380px !important
-        }
-
-        .right .content {
-            left: -250px !important;
-            top: -3px !important;
-        }
-    }
-
-    .partnership {
-        left: 50px;
-
-        .shape-left {
-            height: 737px !important;
-        }
-    }
-
-    .news {
-        transform: rotate(-4deg) translate(-25px, -180px);
-        width: 110%;
-
-        .form-7 {
-            top: -28px;
-            left: -486px;
-        }
-
-        .form-8 {
-            display: none;
-        }
     
-        .content {
-            grid-column: 1/3;
-            left: 100px;
-    
-            h2 {
-                line-height: 30px;
-            }
-        }
-    
-        .news-img {
-            width: 529px;
-            top: -42px;
-            right: 0px;
-            left: 554px;
+        .form-2::before {
+            left: -28px;
         }
     }
 }
 
-@media (min-width: 1001px) and (max-width: 1200px){
 
-    .news {
-        transform: rotate(-4deg) translate(0px, -420px);
-        .form-7 {
-            top: -28px;
-            left: -445px;
-        }
-
-        .form-8 {
-            top: -150px;
-            left: 522px;
-        }
-    
-        .content {
-            grid-column: 1/3;
-    
-            h2 {
-                line-height: 35px;
-            }
-        }
-    
-        .news-img {
-            width: 487px;
-            top: -56px;
-            right: 0px;
-            left: 583px;
-            border-radius: 150px 0 0 0;
-        }
-    }
-  
-}
-
-@media (min-width: 769px) and (max-width: 1200px){
+@media (max-width: 1200px){
     .loading-section {
         grid-template-columns: repeat(6, 190px);
         grid-auto-rows: 250px;
@@ -459,10 +193,11 @@ header {
         .form-2 {
             grid-row: 3/5;
             transform: translateY(-150px);
+            height: 300%;
 
             &::before {
                 top: 17px;
-                left: -8.5px;
+                left: -24.5px;
             }
         }
     }
@@ -474,207 +209,113 @@ header {
         left: 0px;
         top: 100px;
     }
-
-    .partners {
-        grid-row: 4;
-        top: -100px;
-    }
-
-    .active-areas {
-        top: -90px;
-        width: 1400px;
-        height: 448px;
-
-        .left {
-            width: 60%;
-
-            .content {
-                left: -82px;
-
-                &::before {
-                    width: 100%;
-                }
-
-                svg {
-                    right: -64%;
-                }
-            }
-        }
-        
-        .center {
-            left: 460px;
-
-            h2 {
-                transform: rotate(-87deg) translateY(-59px);
-            }
-        }
-
-        .right {
-            width: 80%;
-
-            .content {
-                left: -150px;
-
-                &::before {
-                    width: 100%;
-                }
-
-                svg {
-                    right: -64%;
-                }
-            }
-        }
-    }
-
-    .partnership {
-        grid-template-columns: repeat(6, minmax(150px, 1fr));
-
-        .shape-left {
-            width: 726px;
-            top: -109px;
-            left: -205px;
-            height: 989px;
-            transform: scale(1.04, 1.5);
-        }
-
-        .content {
-            grid-column: 1/6;
-            grid-row: 1/5;
-        }
-    }
 }
 
 
-@media (min-width: 1201px) and (max-width: 1600px){
-   
-    .news {
-        .form-7 {
-            top: -25px;
-            left: -224px;
-        }
-
-        .form-8 {
-            right: 0;
-            left: 903px;
-        }
-    
-        .content {
-            max-width: 650px;
-        }
-    
-        .news-img {
-            width: 50%;
-            top: -170px;
-            right: 0;
-            left: 795px;
-        }
-    }
-}
-
-@media (min-width: 1601px) {
-
+@media (max-width: 1000px){
     .loading-section {
-        grid-template-columns: repeat(6, 372px);
-        grid-auto-rows: 266px;
-    
-        .form-2 {
-            top: 0px;
-            left: 1px;
-        }
-    
-        .form-2::before {
-            left: -28px;
-        }
+        grid-template-columns: repeat(6, 150px) !important;
     }
+}
 
-    .active-areas {
-        width: 120%;
-        max-width: 2800px;
-        .left {
-            width: 40%;
-            .content {
-                left: -100px;
+
+@media (max-width: 800px){
+    .iniciatives {
+        max-width: 150px;
+    }
+}
+
+
+
+@media (max-width: 768px){
+    .loading-section {
+        grid-template-columns: repeat(6, 250px);
+
+        h1 {
+            font-size: clamp(42px, 10vw, 54px);
+            max-width: 250px;
+            top: 100px;
+        }
+
+        .form-1 {
+            height: 600px;
+            top: 50px;
+
+           .fill {
+            left: -100px;
+            clip-path: inset(2.36% 0% 22% 16.4% round 74px 0);
+           }
+        }
+
+        .form-2 {
+            grid-row: 2/6;
+            width: 728px;
+            height: 303px;
+            max-height: 903px;
+            background: var(--dark-green);
+            border-radius: 74px;
+            position: absolute;
+            top: 300.5px;
+            left: -111px;
+
+            &::before {
+                display: none;
             }
         }
-        .center {
-            left: 796px;
+    }
+
+   .iniciatives {
+        grid-column: 3/6;
+        grid-row: 2;
+        color: var(--green-light);
+        top: 176px;
+        left: 0;
+        position: absolute;
+        right: 300px;
+   }
+}
+
+
+@media (max-width: 426px){
+    .loading-section {
+        grid-template-columns: repeat(2, 250px);
+
+        h1 {
+            font-size: clamp(42px, 10vw, 54px);
+            max-width: 250px;
+            top: 100px;
         }
 
-        .right {
-        width: 55%;
-        .content {
-            top: 261px;
-            left: 435px;
+        .form-1 {
+            height: 600px;
+            top: 50px;
+
+           .fill {
+            left: -200px;
+            clip-path: inset(2.36% 0% 22% 16.4% round 74px 0);
+           }
+        }
+
+        .form-2 {
+            grid-row: 2/6;
+            width: 728px;
+            height: 303px;
+            max-height: 903px;
+            background: var(--dark-green);
+            border-radius: 74px;
             position: absolute;
-        }
+            top: 300.5px;
+            left: -211px;
+
+            &::before {
+                display: none;
+            }
         }
     }
 
-    .partnership .shape-left {
-        width: 1186px;
-        height: 1233px;
-    }
+   .iniciatives {
+        grid-column: 2/5;
+        left: auto;
+        right: 300px;
+   }
 }
-
-@media (min-width: 1601px) and (max-width: 2000px){
-    .news {
-        .form-7 {
-            top: -25px;
-            left: 18px;
-        }
-
-        .form-8 {
-            top: -140px;
-        }
-    
-        .news-img {
-            width: 40%;
-            top: -165px;
-            right: 0;
-            left: 1053px;
-        }
-    }
-}
-
-@media (min-width: 2000px){
-    .active-areas {
-        .left .content {
-            left: -72px;
-        }
-
-        .right .content {
-            left: 261px;
-        }
-    }
-
-    .news .news-img {
-        top: -171px;
-    }
-}
-
-
-@media (min-width: 2201px){
-
-    .news {
-        .form-7 {
-            top: -15px;
-            right: 0;
-            left: 516px
-        }
-
-        .form-8 {
-            top: -131px;
-        }
-    
-        .news-img {
-            top: -61px;
-            right: 0;
-            left: 1558px;
-            border-radius: 250px 0 0 0;
-        }
-    }
-}
-
-
-
-
