--- a/src/styles/veiklos-kryptys.scss
+++ b/src/styles/veiklos-kryptys.scss
@@ -198,7 +198,7 @@ main {
 
 
       .veiklos-mobile-shape {
-        background: url("/kontaktai/mobile-shape.svg");
+        background: url("/kontaktai/veiklos-mobile-shape.svg");
         background-repeat: no-repeat;
         background-size: cover;
         width: 600px;
