--- a/src/styles/darbo-skelbimai.scss
+++ b/src/styles/darbo-skelbimai.scss
@@ -13,19 +13,19 @@ button, a, .logo, .right {
 
 header {
     .logo {
-        transform: translateY(0%) !important;
-        clip-path: inset(0 0 0% 0) !important;
+        transform: translateY(0%);
+        clip-path: inset(0 0 0% 0);
     }
 
     .right {
-        transform: translateY(0px) !important;
-        clip-path: inset(0 0 0% 0) !important;
-        color: var(--burgundy-dark) !important;
+        transform: translateY(0px);
+        clip-path: inset(0 0 0% 0);
+        color: var(--burgundy-dark);
 
         .menu .line,
         .menu .bubble,
         .language {
-            background: var(--burgundy-dark) !important;
+            background: var(--burgundy-dark);
         }
     }
 }
