--- a/src/styles/karjera.scss
+++ b/src/styles/karjera.scss
@@ -13,19 +13,19 @@ button, a, .logo, .right {
 
 header {
     .logo {
-        transform: translateY(0%) !important;
-        clip-path: inset(0 0 0% 0) !important;
+        transform: translateY(0%);
+        clip-path: inset(0 0 0% 0);
     }
 
     .right {
-        transform: translateY(0px) !important;
-        clip-path: inset(0 0 0% 0) !important;
-        color: var(--burgundy-dark) !important;
+        transform: translateY(0px);
+        clip-path: inset(0 0 0% 0);
+        color: var(--burgundy-dark);
 
         .menu .line,
         .menu .bubble,
         .language {
-            background: var(--burgundy-dark) !important;
+            background: var(--burgundy-dark);
         }
     }
 }
@@ -673,11 +673,11 @@ footer {
                     margin: 30px auto;
     
                     .number {
-                        color: var(--burgundy-spot) !important;
+                        color: var(--burgundy-spot);
                     }
     
                     p {
-                        color: var(--burgundy-dark) !important;
+                        color: var(--burgundy-dark);
                     }
                 }
     
