--- a/src/styles/kontaktai.scss
+++ b/src/styles/kontaktai.scss
@@ -154,7 +154,7 @@ main {
       margin-bottom: -200px;
       
       .shape-1 {
-        background: url("/kontaktai/mobile-shape.svg");
+        background: url("/kontaktai/veiklos-mobile-shape.svg");
         background-repeat: no-repeat;
         background-size: cover;
         width: 598px;
