--- a/src/styles/pagrindines-veiklos.scss
+++ b/src/styles/pagrindines-veiklos.scss
@@ -356,6 +356,16 @@ main {
       width: 100%;
       min-height: 600px;
 
+      
+      h1 {
+        position: relative;
+        top: -50px;
+        left: 0;
+        width: 90%;
+        transform: translate(0, -50px);
+        margin: auto;
+    }
+
       .shape-1 {
         height: 595px;
         width: 500px;
@@ -453,15 +463,6 @@ main {
         .veiklos-mobile-shape {
             width: 428px;
             height: 380px;
-        }
-
-        h1 {
-            position: relative;
-            top: -50px;
-            left: 0;
-            width: 90%;
-            transform: translate(0);
-            margin: auto;
         }
 
         .shape-2 {
