--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -91,7 +91,7 @@ h4 {
 	height: 50px;
 	border-radius: 0px 0px 26.5px 0px;
 	background:  var(--green-light);
-	color: var(--green-bright);
+	color: var(--dark-green);
 	font-size: clamp(16px, 0.8vw, 25px);
 	border: none;
 	box-sizing: content-box;
