--- a/src/styles/veiklos-kryptys.scss
+++ b/src/styles/veiklos-kryptys.scss
@@ -1,6 +1,9 @@
 body {
     background: var(--green-light);
     min-height: auto;
+    & > * {
+        cursor: url('/icons/cursor-green.svg'), pointer;
+    }
 }
 
 button, a, .logo, .right {
@@ -20,212 +23,168 @@ header {
     }
 }
 
+
 main {
     min-height: 100vh;
-    max-width: 2560px;
+    max-width: 2000px;
     margin: auto;
     overflow: hidden;
 }
 
-
 .section-1 {
     display: grid;
-    grid-template-columns: repeat(4, minmax(200px, 1fr));
-    grid-template-rows: 532px 465px 616px;
-    color: var(--blue-dark);
-    max-width: 2560px;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 600px 810px 168px;
+    color: var(--dark-green);
     margin: auto;
+    position: relative;
     clip-path: inset(0 0 0 100%);
     transform: translateX(-300px);
 
-
-    .forma-1 {
-        background: url('/veiklos-kryptys/shape-1.svg');
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: top;
-        width: 1844px;
-        height: 1649px;
+    .shape-1 {
         position: absolute;
-        right: -400px;
-        transform: translate(-13.8vw, -1.4vw);
-
-        &::before {
-            content: "";
-            position: absolute;
-            width: 72%;
-            height: 83.9%;
-            top: 16.9%;
-            left: -50%;
-            transform: rotate(-3deg);
-            background: var(--green-bright);
-            z-index: -1;
-        }
-    }
-
-    .content {
-        color: var(--green-light);
-        width: 90%;
-      
-
-        h1 {
-            font-size: clamp(50px, 6vw, 128px);
-            margin-bottom: 30px;
-            font-weight: 400;
-        }
-
-        h2 {
-            font-size: clamp(21px, 4vw, 58px);
-            margin-bottom: 30px;
-            font-weight: 400;
-        }
-
-        p {
-            font-size: clamp(14px, 1.3vw, 25px);
-            margin-bottom: 30px;
-        }
-
-        .button {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 220px;
-            height: 50px;
-            border-radius: 0px 0px 26.5px 0px;
-            background:  var(--green-light);
-            color: var(--green-bright);
-            font-size: 14px;
-            border: none;
-            transition: 0.3s;
-        }
-
-        .button:hover {
-            cursor: url('/icons/pointer-green.svg');
-            border-radius: 0;
-        }
-    }
-
-    .content-top {
-        grid-column: 1/3;
-        grid-row: 1;
-        transform: translate(13vw, 300px);
-    }
-
-    .content-left {
-        grid-column: 1/2;
-        grid-row: 2;
-        transform: translate(13vw, 300px);
-        width: 100%;
-
-        
-        h2 {
-            font-size: clamp(21px, 4vw, 58px);
-        }
-
-        p {
-            font-size: clamp(11px, 1vw, 21px);
-        }
-
-        .brands {
-            display: flex;
-            gap: 30px;
-            margin-bottom: 30px;
-
-            img {
-                width: 19%;
-                height: 25px;
-                object-fit: contain;
-            }
-        }
-
-    }
-
-    .content-right {
-        grid-column: 3/4;
-        grid-row: 2;
-        transform: translate(0vw, 300px);
-        width: 100%;
-        
-        h2 {
-            font-size: clamp(21px, 4vw, 58px);
-            margin-bottom: 30px;
-        }
-
-        p {
-            font-size: clamp(11px, 1vw, 21px);
-        }
-
-        .brands {
-            display: flex;
-            gap: 30px;
-            margin-bottom: 30px;
-
-            img {
-                width: 19%;
-                height: 25px;
-                object-fit: contain;
-            }
-        }
-    }
-}
-
-.animated-opacity {
-    color: var(--dark-green);
-    font-size: clamp(21px, 3vw, 58px);
-    transform: translate(13vw, 0%);
-    margin: 100px 0;
-    width: 80%;
-}
-
-@media (max-width: 1000px){
-    .section-1 {
-        .forma-1 {
-            right: 0;
-            left: -400px;
-        }
-    }
-}
-
-@media (max-width: 769px){
-    .section-1 {
-      grid-template-columns: 1fr;
-      grid-template-rows: 400px 700px;
-      width: 100%;
-
-      .forma-1, .forma-2 {
-        display: none;
-      }
-
-
-      .veiklos-mobile-shape {
-        background: url("/kontaktai/veiklos-mobile-shape.svg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        width: 600px;
-        height: 600px;
-        position: absolute;
-        right: -5px;
+        top: -50px;
+        right: -182px;
+        width: 2335px;
+        height: 1712px;
+        z-index: -1;
 
         &::before {
             content: "";
             position: absolute;
             left: -60%;
             width: 100%;
-            height: 99%;
+            height: 54%;
             background: var(--green-spot);
             transform: rotate(-4deg);
             z-index: -1;
         }
-       
-      }
 
-      .content-top {
-        position: static;
+        &::after {
+            content: "";
+            position: absolute;
+            top: 33.59%;
+            right: -26%;
+            width: 32%;
+            height: 54.7%;
+            background: var(--dark-green);
+            transform: rotate(-3deg);
+            z-index: -1;
+        }
+    }
+
+    .shape-2 {
+        width: 1000px;
+        height: 812px;
+        object-fit: cover;
+        object-position: center;
+        position: absolute;
+        top: 753px;
+        left: 0px;
+        z-index: -2;
+    }
+
+    h1 {
+        grid-column: 1/3;
+        font-weight: 400;
+        grid-column: 1;
+        grid-row: 1;
+        max-width: 500px;
+        transform: translate(300px, 290px);
+        position: absolute;
+        right: 1300px;
+    }
+
+    .content {
+        grid-row: 2;
+        grid-column: 4/7;
+        color: var(--green-light);
+        width: 70%;
+        position: absolute;
+        top: 100px;
+        right: 42px;
+
+        h2 {
+            margin-bottom: 30px;
+        }
+
+        p {
+            margin-bottom: 20px;
+        }
+    }
+}
+
+.section-2 {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 450px 400px;
+    color: var(--dark-green);
+    margin: auto;
+    position: relative;
+    background: var(--green-light);
+    transform: rotate(-3deg);
+    width: 120%;
+    margin-top: -100px;
+    left: -100px;
+
+    .shape-3 {
+        position: absolute;
+        top: 50px;
+        right: 221px;
+        width: 511px;
+        height: 506px;
+        object-fit: cover;
+        overflow: hidden;
+    }
+    
+    .foto-1 {
+        position: absolute;
+        top: -96px;
+        right: 18px;
+        width: 728.018px;
+        height: 728.019px;
+        border-radius: 200px 0 0 200px;
+        overflow: hidden;
+
+        .shape-2 {
+            position: absolute;
+            right: -153px;
+            top: -72px;
+            width: 875px;
+            height: 168px;
+            background: url('/pagrindines-veiklos/shape-2.svg');
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+        }
+    }
+
+    .brands {
+        display: flex;
+        gap: 30px;
+        margin-bottom: 30px;
+
+        img {
+            width: 19%;
+            height: 25px;
+            object-fit: contain;
+        }
+    }
+
+    .content {
+        grid-row: 1;
         grid-column: 1/4;
-        color: var(--dark-green);
         width: 60%;
-        transform: translate(0, 100px);
-        margin: auto;
+        position: absolute;
+        top: 132px;
+        right: -15px;
+        transform: rotate(3deg);
 
         h2 {
             margin-bottom: 30px;
@@ -239,44 +198,222 @@ main {
             background: var(--dark-green);
             color: var(--green-light);
         }
-      } 
+    }
 
-      .content-left {
+   
+}
+
+
+
+.section-3 {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 400px 400px;
+    color: var(--dark-green);
+    margin: auto;
+    position: relative;
+    background: var(--green-light);
+    transform: rotate(-3deg);
+    width: 120%;
+    left: -100px;
+
+    .foto-2 {
+        position: absolute;
+        top: 100px;
+        left: 18px;
+        width: 800px;
+        height: 1027.163px;
+        border-radius: 0 200px 0 0;
+        overflow: hidden;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+
+    .brands {
+        display: flex;
+        gap: 30px;
+        margin-bottom: 30px;
+
+        img {
+            width: 19%;
+            height: 25px;
+            object-fit: contain;
+        }
+    }
+
+    .content {
+        grid-row: 1;
+        grid-column: 3/5;
         width: 90%;
-        color: var(--dark-green);
-        grid-column: 1;
-        grid-row: 2;
-        transform: translate(0, 35px);
-        margin: auto;
+        position: absolute;
+        top: 132px;
+        right: -250px;
+        transform: rotate(3deg);
 
-        .brands {
-            flex-wrap: wrap;
-            svg g path {
-                fill: #004A4E;
-            }
+        h2 {
+            margin-bottom: 30px;
+        }
+
+        p {
+            margin-bottom: 20px;
         }
 
         .button {
             background: var(--dark-green);
             color: var(--green-light);
         }
-      }
+    }
 
-      .content-right {
-        width: 90%;
-        color: var(--dark-green);
-        grid-column: 1;
-        grid-row: 3;
-        transform: translate(0, -120px);
-        margin: auto;
+   
+}
 
-        .brands {
-            flex-wrap: wrap;
-            svg g path {
-                fill: #004A4E;
-            }
+
+
+@media (max-width: 1800px) {
+    .section-1 {
+        h1 {
+            left: -200px;
         }
 
+        .content {
+            grid-column: 3/7;
+            top: 162px;
+            right: 117px;
+        }
+    }
+
+    .section-2 {
+        grid-template-rows: 400px 400px;
+    }
+}
+
+
+@media (max-width: 1600px) {
+
+    .section-1 {
+        .shape-1 {
+            left: -650px;
+        }
+
+        .content {
+            grid-column: 4/7;
+        }
+    }
+
+    .section-2 {
+
+        .content {
+            grid-column: 2/5;
+            width: 85%;
+            position: relative;
+            left: 0;
+        }
+
+        .foto-1 {
+            width: 35%;
+        }
+    }
+
+
+    .section-3 {
+
+        .content {
+            grid-column: 3/6;
+            width: 100%;
+            position: relative;
+            left: 50px;
+        }
+
+        .foto-2 {
+            width: 30%;
+        }
+    }
+}
+
+
+@media (max-width: 1025px){
+    .section-1 {
+        .shape-1 {
+            left: -850px;
+        }
+
+        .content {
+            grid-column: 3/7;
+            transform: translate(0, 50px);
+        }
+    }
+}
+
+@media (max-width: 769px){
+    .section-1 {
+      grid-template-columns: 1fr;
+      grid-template-rows: 620px 700px;
+      width: 100%;
+      min-height: 600px;
+
+      
+      h1 {
+        position: relative;
+        top: -50px;
+        left: 0;
+        width: 90%;
+        transform: translate(0, -50px);
+        margin: auto;
+    }
+
+      .shape-1 {
+        height: 595px;
+        width: 500px;
+        left: auto;
+        right: 200px;
+
+        &::before {
+            height: 100%;
+            width: 100%;
+            background: var(--green-spot);
+        }
+
+        &::after {
+            display: none;
+        }
+
+        svg {
+            display: none;
+          }
+      }
+      
+      .mobile-shape {
+        background: url("/kontaktai/veiklos-mobile-shape.svg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 598px;
+        height: 540px;
+        position: absolute;
+        right: -5px;
+      }
+      
+      .shape-2 {
+        width: 120%;
+        height: 200px;
+        transform: rotate(-4deg);
+        top: 550px;
+        left: -10%;
+      }
+
+      .content {
+        color: var(--dark-green);
+        grid-column: 1;
+        width: 90%;
+        left: 0px;
+        right: 0px;
+        margin: 30px auto;
+        transform: translate(0);
+        
         .button {
             background: var(--dark-green);
             color: var(--green-light);
@@ -284,17 +421,60 @@ main {
       }
     }
 
-    .animated-opacity {
-        width: 90%;
-        transform: translate(0);
-        margin: auto;
-        margin-top: -50px;
+    .section-2, .section-3 {
+        display: block;
+        transform: rotate(0);
+        left: 0;
+        width: 100%;
+        margin: 0;
+        .foto-1, .foto-2 {
+            position: relative;
+            width: 120%;
+            height: 200px;
+            top: 0;
+            left: -10%;
+            border-radius: 0px;
+            transform: rotate(-4deg);
+
+            .shape-2 {
+                display: none;
+            }
+        }
+
+        .content {
+            grid-row: auto;
+            grid-column: 1;
+            width: 90%;
+            top: -50px;
+            left: 0px;
+            margin: 100px auto;
+            transform: rotate(0deg);
+        }
     }
 }
 
 
 @media (max-width: 426px){
-    .section-1  .content-top {
-        width: 90%;
+  
+    .section-1 {
+        grid-template-columns: 1fr;
+        grid-template-rows: 600px 850px;
+
+        .veiklos-mobile-shape {
+            width: 428px;
+            height: 380px;
+        }
+
+        .shape-2 {
+            top: 550px;
+        }
+    }
+
+    .section-3 {
+        margin-top: -100px;
+        
+        .content {
+            margin-bottom: 0;
+        }
     }
 }
