--- a/src/styles/pagrindines-veiklos.scss
+++ b/src/styles/pagrindines-veiklos.scss
@@ -448,6 +448,7 @@ main {
             top: -50px;
             left: 0px;
             margin: 100px auto;
+            margin-bottom: 0;
             transform: rotate(0deg);
         }
     }
