--- a/src/styles/verslo-inovaciju-labaratorija.scss
+++ b/src/styles/verslo-inovaciju-labaratorija.scss
@@ -502,8 +502,13 @@ footer {
             top: -50px;
             left: 0px;
             margin: 100px auto;
+            margin-bottom: 0;
             transform: rotate(0deg);
         }
+    }
+
+    .section-3 {
+        margin-bottom: -150px;
     }
 }
 
