--- a/src/styles/verslo-inovaciju-labaratorija.scss
+++ b/src/styles/verslo-inovaciju-labaratorija.scss
@@ -167,7 +167,7 @@ main {
         right: 18px;
         width: 728.018px;
         height: 728.019px;
-        border-radius: 200px 0 0 200px;
+        border-radius: 200px 0 0 100px;
         overflow: hidden;
 
         .shape-2 {
@@ -232,7 +232,7 @@ main {
 .section-3 {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 400px 400px;
+    grid-template-rows: 400px 300px;
     color: var(--blue-dark);
     margin: auto;
     position: relative;
@@ -246,8 +246,9 @@ main {
         top: 100px;
         left: 18px;
         width: 800px;
-        height: 1027.163px;
-        border-radius: 0 200px 0 0;
+        height: 600px;
+        border-radius: 0 100px 200px 0;
+        transform: translateY(-50px);
         overflow: hidden;
 
         img {
@@ -291,6 +292,24 @@ main {
             background: var(--blue-dark);
             color: var(--blue-extra-light);
         }
+    }
+}
+
+.acme-nt {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 30px;
+    width: 80%;
+    margin: 100px auto;
+    color: var(--blue-dark);
+
+    h2 {
+        margin-bottom: 30px;
+    }
+
+    .nt {
+        width: 30%;
     }
 }
 
@@ -338,10 +357,6 @@ footer {
             right: 117px;
         }
     }
-
-    .section-2 {
-        grid-template-rows: 400px 400px;
-    }
 }
 
 
@@ -357,8 +372,9 @@ footer {
         }
     }
 
-    .section-2 {
 
+    .section-2 {
+        grid-template-rows: 400px 300px;
         .content {
             grid-column: 2/5;
             width: 85%;
@@ -508,7 +524,16 @@ footer {
     }
 
     .section-3 {
-        margin-bottom: -150px;
+        margin-bottom: -90px;
+    }
+
+    .acme-nt {
+        width: 90%;
+        margin: 100px auto;
+
+        .nt {
+            width: 45%;
+        }
     }
 }
 
@@ -533,6 +558,13 @@ footer {
         
         .content {
             margin-bottom: 0;
+        }
+    }
+
+    .acme-nt {
+        margin-bottom: 0;
+        .nt {
+            width: 100%;
         }
     }
 }
